feat: set up Next.js project structure and core dependencies
- Install Shadcn/ui, Zustand, Framer Motion, Zod, @dnd-kit
- Create organized folder structure for components, stores, types, utils
- Implement Zustand store for builder state management
- Add TypeScript interfaces and Zod validation schemas
- Create placeholder builder and section components
- Configure TypeScript strict mode and enhanced ESLint rules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,20 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components/*": ["./src/components/*"],
+      "@/types/*": ["./src/types/*"],
+      "@/stores/*": ["./src/stores/*"],
+      "@/utils/*": ["./src/utils/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
