--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "immer": "^10.1.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
